# microMiddlewares

./: .gitignore  CMakeLists.txt  DEBUG.h  Doxyfile  README.md
BUS8080/: CMakeLists.txt
BUS8080/include/BUS8080/: Driver8080.h
BUS8080/src/TivaCTM4C1294/: Driver8080.c
I2C/: CMakeLists.txt  DriverI2C.c  DriverI2C.h  DriverI2C_config.c  DriverI2C_config.h
I2C/include/I2C/TivaCTM4C1294/: DriverI2C_config.h
I2C/src/TivaCTM4C1294/: DriverI2C.c
ILI9341/: CMakeLists.txt
ILI9341/include/ILI9341/: ILI9341.h
MCP2515/: CMakeLists.txt
MCP2515/include/MCP2515/: MCP2515.h
MCP2515/src/TivaCTM4C1294/: MCP2515_config.c
Misc/: CMakeLists.txt
Misc/include/: DEBUG.h
SPI/: CMakeLists.txt  DriverSPI.c  DriverSPI_config.c
SPI/include/SPI/TivaCTM4C1294/: DriverSPI_config.h
SPI/src/TivaCTM4C1294/: DriverSPI_config.c
SSD1306/: CMakeLists.txt  SSD1306.h  SSD1306_i2c.c  SSD1306_i2c_config.h  SSD1306_i2c_regmap.h
SSD1306/include/SSD1306/: SSD1306.h  SSD1306_i2c.h
SSD1306/include/SSD1306/TivaCTM4C1294/: SSD1306_i2c_config.h
SSD1306/src/TivaCTM4C1294/: SSD1306_i2c.c
System/: CMakeLists.txt
System/include/System/DSP/LTISystem/: LTISystem.h
System/src/DSP/LTISystem/: LTISystem.c
TivaWare/: CMakeLists.txt
include/: DEBUG.h
include/BUS8080/: Driver8080.h
include/I2C/: DriverI2C.h
include/ILI9341/: ILI9341.h  ILI9341_regmap.h
include/MCP2515/: MCP2515.h  MCP2515_regmap.h
include/MCP2515/TivaCTM4C1294/: MCP2515_config.h
include/SPI/: DriverSPI.h  DriverSPI_config.h
include/SPI/TivaCTM4C1294/: DriverSPI_config.h
include/SSD1306/: SSD1306_i2c.h
include/System/DSP/LTISystem/: LTISystem.h
include/System/uHeap/: README.md  uHeap.h
include/simpleGFX/: simplegfx.h  simplegfx_config.h
simpleGFX/: CMakeLists.txt
simpleGFX/include/simpleGFX/: simpleGFX.h  simpleGFX_config.h
simpleGFX/src/TivaCTM4C1294/: simpleGFX.c  simpleGFX_16b.c  simpleGFX_1b.c  simpleGFX_8b.c  simpleGFX_config.c
source/: DEBUG.c
source/BUS8080/TivaCTM4C1294/: Driver8080.c
source/I2C/TivaCTM4C1294/: DriverI2C.c  DriverI2C_config.c
source/ILI9341/TivaCTM4C1294/: ILI9341.c
source/MCP2515/TivaCTM4C1294/: MCP2515_SPI.c  MCP2515_config.c
source/SPI/TivaCTM4C1294/: DriverSPI.c  DriverSPI_config.c
source/SSD1306/TivaCTM4C1294/: SSD1306_i2c.c
source/System/uHeap/: uHeap.c
source/simpleGFX/: README.md
source/simpleGFX/TivaCTM4C1294/: simplegfx.c  simplegfx_16b.c  simplegfx_1b.c  simplegfx_8b.c  simplegfx_config.c
